<resources>
    <string name="app_name">GUFI</string>
    <string name="background_loading_description">Загрузочный фон</string>
    <string name="name_app_abbreviation">Г.У.Ф.И</string>
    <string name="name_app_detail">Группа услуг и фактических исполнителей</string>
    <!--    <string name="faq1_text_header_detail">Для специалистов и профессионалов своего дела</string>-->
    <!--    <string name="faq2_text_header_detail">Для потребителей</string>-->
    <!--    <string name="faq3_text_header_detail">Достоинства и преимущества работы через приложение</string>-->
    <string name="background_faq_description">Фоновый рисунок раздела F.A.Q.</string>
    <string name="button_start">Начать</string>
    <string name="label_service_catalog">Каталог услуг</string>
    <string name="label_city">Одесса</string>
    <string name="image_description_icon_profile">Иконка профиля</string>
    <string name="image_description_icon_search">Поиск</string>
    <string name="description_icon_favorite">Иконка избранного</string>
    <string name="label_favorite">Избранное</string>
    <string name="label_favorite_all">Все</string>
    <string name="label_favorite_studios">Студии</string>
    <string name="label_favorite_masters">Мастера</string>
    <string name="label_all_services">Все услуги</string>
    <string name="label_menu_1">услуги</string>
    <string name="label_menu_2">я исполнитель</string>
    <string name="label_menu_3">я модель</string>
    <string name="label_menu_4">я заказчик</string>
    <string name="image_description_icon_create">Иконка создания нового мастера</string>
    <string name="image_description_icon_go">Иконка перехода в каталог</string>
    <string name="label_masters">Мастера</string>
    <string name="label_studios">Студии</string>
    <string name="image_view_description_person_photo">Фотография мастера или логотип студии</string>
    <string name="description_item_clock">Логотип часов</string>
    <string name="description_bank_card">Логотип банковской карты</string>
    <string name="label_profile">Профиль</string>
    <string name="image_description_big_profile">Фото профиля</string>
    <string name="description_icon_phone">Иконка телефона</string>
    <string name="description_icon_man">Иконка человека</string>
    <string name="description_icon_symbol">Иконка половой принадлежности</string>
    <string name="description_stars_profile">Звезды рейтинга мастера</string>
    <string name="description_icon_portfolio">Иконка портфолио</string>
    <string name="description_text_test_portfolio">Доброго времени суток! Професионально предоставляю услуги по Пирсингу. Только лучшие и стирильные материалы в городе. Спешите записатся на сеанс, время ограничено.</string>
    <string name="description_photo">Фотография</string>
    <string name="text_point_of_contact">Есть выезд к клиенту на дом</string>
    <string name="label_profile_certificates">Сертификаты</string>
    <string name="label_profile_my_messages">Мои сообщения</string>
    <string name="label_profile_calendar">Календарь</string>
    <string name="smth_icon">Иконка</string>
    <string name="label_profile_services_and_prices">Услуги и цены</string>
    <string name="label_profile_favorite_masters_and_services">Избранные мастера и услуги</string>
    <string name="label_edit_profile">Редактировать профиль</string>
    <string name="label_f_a_q">F.A.Q.</string>
    <string name="label_exit">Выход</string>
    <string name="label_test_number_phone">067&#8211;123&#8211;456&#8211;78</string>
    <string name="label_test_surname">Андрей Ронин</string>
    <string name="label_test_sex">мужской</string>
    <string name="label_name">Имя</string>
    <string name="label_test_name">Андрей</string>
    <string name="hint_name">Введите имя</string>
    <string name="label_surname">Фамилия</string>
    <string name="hint_surname">Введите фамилию</string>
    <string name="label_phone">Телефон</string>
    <string name="hint_number_phone">Введите номер телефона</string>
    <string name="label_sex">Пол</string>
    <string name="hint_edit_sex">Введите пол</string>
    <string name="label_about">О себе</string>
    <string name="label_test_about_me">Информация о себе</string>
    <string name="hint_edit_about_me">Введите информацию о себе</string>

    <string-array name="faq_text_header_detail">
        <item>Для специалистов и профессионалов своего дела</item>
        <item>Для потребителей</item>
        <item>Достоинства и преимущества работы через приложение</item>
    </string-array>

    <string-array name="faq1_description_text">
        <item>Самостоятельно управляете своим временем, местом, объемом и стоимостью работы.</item>
        <item>Имеете постоянный доступ к нескончаемой базе клиентов.</item>
        <item>Работаете на себя и на свой рейтинг.</item>
        <item>Помогаете тем, кто ждет Вашей помощи: профессионально, качественно и современно.</item>
    </string-array>

    <string-array name="faq2_description_text">
        <item>Максимально решение проблемы/задачи/запроса:</item>
        <item>Оперативность: находите специалистов в шаговой доступности от Вас.</item>
        <item>Качество: выбираете, опираясь на реальные отзывы.</item>
        <item>На любой кошелек: узнаете стоимость на предварительном этапе, общаясь со специалистами.</item>
        <item>Вам оказывают помощь те, кто действительно хотят и могут помочь.</item>
    </string-array>

    <string-array name="faq3_description_text">
        <item>Встроенные карты: геолокация заказчиков и специалистов в формате "здесь и сейчас".</item>
        <item>Расписание: режим работы специалистов.</item>
        <item>Рейтинг: выбор специалиста на основе информации о качестве оказываемых услуг.</item>
        <item>Комуникации: связь специалиста и клиента в режиме онлайн.</item>
        <item>Алгоритм: последовательное и быстрое оформление заявок.</item>
    </string-array>


</resources>