<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreLoaderActivity">

    <ImageView
        android:id="@+id/imageViewLoading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_loading"
        android:contentDescription="@string/background_loading_description" />

    <TextView
        android:id="@+id/textViewAbbreviationPreloader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="120dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/name_app_abbreviation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textViewNameDetail"
        />

    <TextView
        android:id="@+id/textViewNameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="15"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/name_app_detail"
        app:layout_constraintTop_toBottomOf="@+id/textViewAbbreviationPreloader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="524dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>