<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailServiceActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_catalog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_catalog_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_main"
        app:layout_constraintBottom_toTopOf="@+id/guideline_catalog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewHeaderServiceCatalog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="36dp"
            android:text="@string/label_service_catalog"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewSearch"
            android:layout_width="13dp"
            android:layout_height="13dp"
            app:srcCompat="@drawable/search"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewHeaderServiceCatalog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/image_description_icon_search"
            />

        <TextView
            android:id="@+id/textViewHeaderCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginEnd="16dp"
            android:text="@string/label_city"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewSearch"
            app:layout_constraintTop_toBottomOf="@+id/textViewHeaderServiceCatalog" />

        <ImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginTop="19dp"
            app:srcCompat="@drawable/man"
            android:layout_marginEnd="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_description_icon_profile" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="103dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_catalog"
        >


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:background="@drawable/bottom_navigation_background"
            app:menu="@menu/bottom_menu" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8.4dp"
        android:background="@drawable/line_menu"
        android:layout_marginBottom="14dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>